# mini-data-platform

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: cd-deploy.yml  ci-dataflow.yml  ci-infra.yml  ci-lint.yml  ci-tests.yml  ci.yml
airflow/: Dockerfile
airflow/dags/: sales_pipeline.py
airflow/dags/services/: __init__.py  minio_service.py  postgres_service.py
airflow/dags/transformers/: __init__.py  data_cleaner.py  data_enricher.py
airflow/dags/utils/: __init__.py  connections.py  logging_config.py
airflow/dags/validation/: __init__.py  schemas.py  validators.py
data-generator/: generate_sales.py  requirements.txt
docs/: black_box_learning.md  cicd_overview.md  dashboard_requirements.md  project_walkthrough.md
scripts/ci/: bootstrap_compose_stack.sh  check_sales_row_count.sh  collect_dataflow_debug_logs.sh  generate_and_upload_test_data.sh  infra_create_env.sh  infra_install_sqlfluff.sh  infra_prepare_airflow_dirs.sh  infra_sql_lint.sh  infra_start_airflow_db.sh  infra_validate_dags.py  install_lint_tools.sh  install_test_dependencies.sh  print_dataflow_summary.sh  print_sales_analytics_samples.sh  run_lint_suite.sh  run_pytest_suite.sh  trigger_dag.sh  upload_minio_object.py  verify_data_in_postgres.sh  verify_metabase_visualization.sh  verify_minio_archival.py  verify_minio_buckets.py  verify_postgres_schema.sh  wait_for_dag.sh  wait_platform_services.sh  write_compose_env.sh
sql/: init.sql
tests/: __init__.py  conftest.py  requirements.txt  test_data_cleaner.py  test_data_enricher.py  test_integration.py  test_minio_service.py  test_postgres_service.py  test_schemas.py  test_validators.py
